# obsidianresume

./: .env.example  .gitignore  README.md  pyproject.toml
knowledge/: template.tex  user_preference.example.txt
knowledge/experience/: example_company.md
knowledge/roles/: ai_ml_engineer.md  data_analyst.md  data_scientist.md  generate.md  product_analyst_ops.md
src/obsidianresumeforge/: bullet_promoter.py  cognee_lifecycle.py  crew.py  knowledge_graph_analytics.py  knowledge_graph_store.py  knowledge_graph_viz.py  main.py  output_writers.py  retry_orchestrator.py  run_id.py  semantic_filter.py  watcher.py
src/obsidianresumeforge/config/: agents.yaml  tasks.yaml
src/obsidianresumeforge/tools/: cognee_memory_tool.py  cognee_runner.py  custom_tool.py  judgeval_local_evaluator_runner.py
tests/: conftest.py  test_bullet_promoter.py  test_cognee_lifecycle.py  test_confirmation_gate.py  test_interview_prep.py  test_judgeval_tool.py  test_kg_analytics.py  test_knowledge_graph_integration.py  test_knowledge_graph_store.py  test_output_writers.py  test_retry_orchestrator.py  test_role_scaffold.py  test_run_id.py  test_semantic_filter.py  test_watcher.py
